--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -72,16 +72,16 @@ form {
   list-style: none;
 }
 
-.gallery__item {
+.gallery-item {
   border: 1px solid #808080;
 }
 
-.gallery__link {
+.gallery-link {
   display: flex;
   flex-direction: column;
 }
 
-.gallery__img {
+.gallery-item img{
   width: 360px;
   height: 160px;
   margin-bottom: 4px;
